--- a/style.css
+++ b/style.css
@@ -161,33 +161,20 @@ header.sticky .nav-bar{
     width: 100%;
 }
 
-.home-container .media-icons{
-    display: flex;
-    flex-direction: column;
-    margin-right: 40px;
-
-}
-
-.home-container .media-icons a{
-    color: var(--second-color);
-    font-size: 1.5em;
-    margin: 10px 0;
-}
-
-.home-container .media-icons a:hover{
-    color: var(--hover-color);
+.home-container .info{
+    width: 100%;
 }
 
 .home-container .info h2{
     font-size: 4em;
-    font-weight: 600;
-    line-height: 70px;
+    font-weight: 700;
+    line-height: 70px;      
 }
 
 
 .home-container .info h3{
     color: var(--third-color);
-    font-feature-settings: 1.3rem;
+    font-feature-settings: 1.3em;
     font-weight: 600;
     line-height: 50px;
 }
@@ -220,7 +207,7 @@ header.sticky .nav-bar{
 }
 
 .home-container .home-img img{
-    width: 50%;
+    width: 100%;
     transform: translate(0,0);
 }
 
@@ -284,7 +271,6 @@ header.sticky .nav-bar{
 
 .about-img{
     position: relative;
-
 }
 
 .about-img img{
