--- a/style.css
+++ b/style.css
@@ -470,7 +470,26 @@ header.sticky .nav-bar{
     margin: 0 auto;
 }
 
+.portfolio-list2{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+    max-width: 100%;
+    gap: 35px;
+    margin: 0 auto;
+    padding-bottom: 30px;
+}
+
 .portfolio-list .img-card{
+    position: relative;
+    max-width: 100%;
+    height: 360px;
+    border-radius: 10px;
+    box-shadow: var(--box-shadow);
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.portfolio-list2 .img-card{
     position: relative;
     max-width: 100%;
     height: 360px;
@@ -484,7 +503,20 @@ header.sticky .nav-bar{
     transition: 1s ease;
 }
 
+.portfolio-list2 .img-card .overlay{
+    transition: 1s ease;
+}
+
 .portfolio-list .img-card:hover .overlay{
+    z-index: 777;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgb(215, 215, 215); 
+    opacity: 0;
+}
+
+.portfolio-list2 .img-card:hover .overlay{
     z-index: 777;
     position: absolute;
     width: 100%;
@@ -505,7 +537,25 @@ header.sticky .nav-bar{
     transition: .5s ease;
 }
 
+.portfolio-list2  .img-card .info{
+    z-index: 777;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin: 20px;
+    color: white;
+    transform: translateY(20px);
+    opacity: 0;
+    transition: .5s ease;
+}
+
+
 .portfolio-list .img-card:hover .info{
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.portfolio-list2 .img-card:hover .info{
     transform: translateY(0);
     opacity: 1;
 }
@@ -514,20 +564,40 @@ header.sticky .nav-bar{
     font-size: 1.5em;
 }
 
+.portfolio-list2 .img-card .info h3{
+    font-size: 1.5em;
+}
+
 .portfolio-list .img-card .info a h3{
     font-size: 1.5em;
     color: white;
 }
 
+.portfolio-list2 .img-card .info a h3{
+    font-size: 1.5em;
+    color: white;
+}
+
+
 .portfolio-list .img-card .info span{
     font-size: 1.2em;
 }
+
+.portfolio-list2 .img-card .info span{
+    font-size: 1.2em;
+}
+
 
 .portfolio-list .img-card .info img{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    
+}
+
+.portfolio-list2 .img-card .info img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .porfolio-model{
